--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
+    "@react-three/drei": "^9.68.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
+    "three": "^0.152.2",
     "web-vitals": "^3.3.1"
   },
   "scripts": {
