--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.10",
-    "@types/react-dom": "^18.2.7",
+    "@mui/icons-material": "^5.14.11",
+    "@mui/material": "^5.14.11",
+    "@types/react-dom": "^18.2.8",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^3.4.0",
-    "@mui/icons-material": "^5.14.9"
+    "styled-components": "^6.0.8",
+    "web-vitals": "^3.5.0"
   },
   "scripts": {
     "v..": "npm version patch --no-git-tag-version",
